--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -18,8 +18,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2063912521900403"
-     crossorigin="anonymous"></script>
-    
+        crossorigin="anonymous"></script>
+
     {% load static %}
 
     {% block title %}
@@ -44,17 +44,17 @@
 
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
     {% block nav %}
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top bg-light text-dark">
+    <nav class="navbar navbar-expand-lg sticky-top " style="background-color: #260037;">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand me-2" href="/">
-                <img class="nav-img" src="{% static 'img/ci.jpg' %}" height="16" alt="Coding India" loading="lazy"
-                    style="margin-top: -1px;" />
+            <a class="navbar-brand" href="/">
+                <img class="nav-img" src="{% static 'images/codingindia.png' %}" alt="Coding India" loading="lazy"
+                    style="margin: 0; padding: 0; height: 80px; border-radius: 50%;" />
             </a>
 
             <!-- Toggle button -->
@@ -86,7 +86,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'project_index' %}">Projects</a>
                     </li>
-                    
+
 
                 </ul>
                 <!-- Left links -->
@@ -94,13 +94,13 @@
                 <div style="list-style: none;" class="d-flex align-items-center">
                     <li>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-primary me-3" href="{% url 'logout' %}">Logout</a>
+                        <a class="btn loginbtn me-3" href="{% url 'logout' %}">Logout</a>
                         {% else %}
-                        <a class="btn btn-primary me-3" href="{% url 'login' %}">Login</a>
+                        <a class="btn loginbtn me-3" href="{% url 'login' %}">Login</a>
                         {% endif %}
                     </li>
                     <li>
-                        <a href="{% url 'signup' %}" class="btn btn-outline-primary" id="signup-btn">Sign Up</a>
+                        <a href="{% url 'signup' %}" class="btn signupbtn" id="signup-btn">Sign Up</a>
                     </li>
                 </div>
             </div>
@@ -109,26 +109,51 @@
 
         <!-- Container wrapper -->
     </nav>
-    
+
 
     {% endblock nav %}
 
     <!-- BLOCK CONTENT -->
 
     {% block content %}
-    <video style="min-height: 100%; width: 100%; height: 450px; background-color: black;" autoplay muted loop>
-        <source src="{% static 'video/VID-20211220-WA0007.mp4' %}" type="video/mp4">
-    </video>
+    <div style="background: #260037">
+        <section>
+            <div class="row" style="max-width: 100vw;">
+                <div class="col-md-6">
+                    <div class="container" style="margin-top: 20%;">
+                        <h1 style="color: white">
+                            <pre>Want To Learn Coding?</h1>
+                    <p style="color: rgba(255, 255, 255, 0.863)">Unlock your potential with our comprehensive coding curriculum. Whether you're a beginner or an advanced programmer, we have everything you need to excel in the fast-paced world of technology.</p>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-3">
+                            <a href="" class="btn loginbtn" style="width: 100%; ">Blogs</a>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="" class="btn signupbtn" style="width: 100%;">Codes</a>
+                        </div>
+                        <div class="col-md-3"></div>
+                    </div>
+                </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="../../../static/images/hero1.png" style="width: 100%; height: 85vh;" alt="">
+                </div>
+            </div>
+        </section>
+    </div>
 
-    <section>
-        <h1 class="text-center mt-3 text-primary"
-            style="font-size: 3.2rem ;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchetz MS', sans-serif; font-weight: 600;">
-            Coding India</h1>
-        <div class=" container col-xl-8 px-2">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <section class="mt-5">
+        <h2 style="" id="services">Our Services</h2>
+
+        <div class="row">
+        <div class=" container col-xl-11 px-2">
+            <div class="row flex-lg-row-reverse align-items-center py-5; max-width: 100vw">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="https://res.cloudinary.com/coding-india/image/upload/v1643201586/robo_dhv6dj.jpg"
-                        class="d-block mx-lg-auto img-fluid title-img" alt="Bootstrap Themes" width="700" height="500"
+                        class="d-block mx-lg-auto img-fluid title-img" alt="Bootstrap Themes" style="width: 100%; height: 250px; border-radius: 15px;"
                         loading="lazy">
                 </div>
                 <div class="col-lg-6">
@@ -142,8 +167,8 @@
             </div>
         </div>
 
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="container col-xxl-11 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center py-5; max-width: 100vw">
 
                 <div class="col-lg-6">
                     <h2 class="display-5 fw-bold lh-1 mb-3">Codes</h2>
@@ -155,37 +180,19 @@
 
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="https://res.cloudinary.com/coding-india/image/upload/v1643201584/open_book_dn4vqf.png"
-                        class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" width="700" height="500"
+                        class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" style="width: 100%; height: 250px"
                         loading="lazy">
                 </div>
             </div>
         </div>
+    </div>
     </section>
 
-    <h1 class="text-center text-primary"
+    <!-- <h1 class="text-center text-primary"
         style="font-size: 3.2rem ;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchetz MS', sans-serif; font-weight: 600;">
         Our Team</h1>
-
-    <div class="container team mt-3">
-
-        <!-- Three columns of text below the carousel -->
-        <div class="row">
-            {% for i in team %}
-            <div class="col-lg-4">
-                <center><img class="bd-placeholder-img rounded-circle img" src="../../../static/img/DJ.jpg" alt="">
-                </center>
-                <center>
-                    <h2>{{i.name}}</h2>
-                </center>
-                <center>
-                    <p>{{i.about}}</p>
-                </center>
-                <center>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </center>
-            </div><!-- /.col-lg-4 -->
-            {% endfor %}
-        </div>
+ -->
+    
     {% endblock content %}
 
 
