--- a/CodingIndia/static/css/main.css
+++ b/CodingIndia/static/css/main.css
@@ -63,9 +63,27 @@ pre {
 #services {
     font-family: 'Instrument Serif', serif;
     font-size: 2.5rem;
-    color: #000;
+    color: #260037;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     margin-bottom: 25px;
+}
+#services:hover {
+    text-decoration: underline;
+    transition: 5s ease-in;
+    color: #F2AE2E;
+}
+
+.mainpara{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+    /* margin-bottom: 15px; */
+    text-justify: newspaper;
+}
+.servicetitle{
+    color: #260037;
+}
+.lead{
+    color: black;
 }
