--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -36,7 +36,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet" />
     <!-- End MD -->
 
-
     {% block css %}
     <link rel="stylesheet" href="{%static 'css/main.css' %}">
 
@@ -110,7 +109,6 @@
         <!-- Container wrapper -->
     </nav>
 
-
     {% endblock nav %}
 
     <!-- BLOCK CONTENT -->
@@ -123,9 +121,9 @@
                     <div class="container" style="margin-top: 20%;">
                         <h1 style="color: white">
                             <pre>Want To Learn Coding?</h1>
-                    <p style="color: rgba(255, 255, 255, 0.863)">Unlock your potential with our comprehensive coding curriculum. Whether you're a beginner or an advanced programmer, we have everything you need to excel in the fast-paced world of technology.</p>
+                    <p style="color: rgba(255, 255, 255, 0.863)" class="mainpara">Unlock your potential with our comprehensive coding curriculum. Whether you're a beginner or an advanced programmer, we have everything you need to excel in the fast-paced world of technology.</p>
                 </div>
-                <div class="container">
+                <div class="container mt-5">
                     <div class="row">
                         <div class="col-md-3"></div>
                         <div class="col-md-3">
@@ -146,23 +144,41 @@
     </div>
 
     <section class="mt-5">
-        <h2 style="" id="services">Our Services</h2>
+        <h2 id="services">Our Services</h2>
 
         <div class="row">
+            <div class="container col-xxl-11 px-4 py-5">
+                <div class="row flex-lg-row-reverse align-items-center py-5; max-width: 100vw">
+    
+                    <div class="col-lg-6">
+                        <h2 class="display-5 fw-bold lh-1 mb-3 servicetitle">Website Development</h2>
+                        <p class="lead">At Coding India, we offer website creation services for individuals as well as businesses.</p>
+                        <a href="{% url 'code_index' %}" class="btn loginbtn btn-lg px-4">Contact Us</a>
+    
+                    </div>
+    
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <img src="../../../static/images/pngegg.png"
+                            class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" style="width: 100%; height: 350px"
+                            loading="lazy">
+                    </div>
+                </div>
+            </div>
+
         <div class=" container col-xl-11 px-2">
             <div class="row flex-lg-row-reverse align-items-center py-5; max-width: 100vw">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="https://res.cloudinary.com/coding-india/image/upload/v1643201586/robo_dhv6dj.jpg"
-                        class="d-block mx-lg-auto img-fluid title-img" alt="Bootstrap Themes" style="width: 100%; height: 250px; border-radius: 15px;"
+                        class="d-block mx-lg-auto img-fluid title-img" alt="Bootstrap Themes" style="width: 100%; height: 350px; border-radius: 15px;"
                         loading="lazy">
                 </div>
                 <div class="col-lg-6">
-                    <h2 class="display-5 fw-bold lh-1 mb-3">Blogs</h2>
+                    <h2 class="display-5 fw-bold lh-1 mb-3 servicetitle">Blogs</h2>
                     <p class="lead">Coding India is a software development company which offers daily blogs on AI and
                         ML,
                         web development and Python Programming</p>
 
-                    <a href="{% url 'blogs_index' %}" class="btn btn-primary btn-lg px-4">Blogs</a>
+                    <a href="{% url 'blogs_index' %}" class="btn loginbtn btn-lg px-4">Blogs</a>
                 </div>
             </div>
         </div>
@@ -171,27 +187,22 @@
             <div class="row flex-lg-row-reverse align-items-center py-5; max-width: 100vw">
 
                 <div class="col-lg-6">
-                    <h2 class="display-5 fw-bold lh-1 mb-3">Codes</h2>
+                    <h2 class="display-5 fw-bold lh-1 mb-3 servicetitle">Codes</h2>
                     <p class="lead">Coding India provides Codes for beginners to learn and try program of one's
                         interest.</p>
-                    <a href="{% url 'code_index' %}" class="btn btn-primary btn-lg px-4">Codes</a>
+                    <a href="{% url 'code_index' %}" class="btn loginbtn btn-lg px-4">Codes</a>
 
                 </div>
 
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="https://res.cloudinary.com/coding-india/image/upload/v1643201584/open_book_dn4vqf.png"
-                        class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" style="width: 100%; height: 250px"
+                        class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" style="width: 100%; height: 350px"
                         loading="lazy">
                 </div>
             </div>
         </div>
     </div>
     </section>
-
-    <!-- <h1 class="text-center text-primary"
-        style="font-size: 3.2rem ;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchetz MS', sans-serif; font-weight: 600;">
-        Our Team</h1>
- -->
     
     {% endblock content %}
 
