--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -137,7 +137,7 @@
                 </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="../../../static/images/hero1.png" style="width: 100%; height: 85vh;" alt="">
+                    <img src="{% static 'images/hero1.png' %}" style="width: 100%; height: 85vh;" alt="">
                 </div>
             </div>
         </section>
@@ -158,7 +158,7 @@
                     </div>
     
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="../../../static/images/pngegg.png"
+                        <img src="{% static 'images/pngegg.png' %}"
                             class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" style="width: 100%; height: 350px"
                             loading="lazy">
                     </div>
