--- a/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
+++ b/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="text-center mt-4 mb-3 text-success"
+    <h1 class="text-center mt-4 mb-3 servicetitle"
     style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">{{play.name}}</h1>
     <div class="row">
         {% for i in blogs %}
@@ -11,7 +11,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{i.name|slice:"0:30"}}</h5>
                 <p class="card-text">{{i.date}}</p>
-                <a href="{% url 'read-codes' i.id %}" class="btn btn-primary">Read Code</a>
+                <a href="{% url 'read-codes' i.id %}" class="btn loginbtn">Read Code</a>
             </div>
         </div>
         {% endfor %}
