--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -8,7 +8,7 @@
 {% endblock title %}
 
 {% block meta %}
-    <meta name="keywords" content="{{blogs, coding india, html, python, css, SQL, Javascript, How to, Data Science, Data Science with Python, coding, programming, Tips, Learn to code, AI, ML, Tutorials, Codes, Courses, Learning}}">
+    <meta name="keywords" content="blogs, coding india, html, python, css, SQL, Javascript, How to, Data Science, Data Science with Python, coding, programming, Tips, Learn to code, AI, ML, Tutorials, Codes, Courses, Learning">
     <meta name="description" content="Coding india Blog page is one where you can read blogs on different topics like Data Science, machine Learning AI etc.">
     <meta name="author" content="Coding India , Digamber Jha">
 
@@ -20,7 +20,7 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="text-center mb-3 text-success mt-4"
+    <h1 class="text-center mb-3 servicetitle mt-4"
         style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">
         {{play.name}} Blogs</h1>
 
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{blog.title|slice:"0:30"}}...</h5>
                     <p class="card-text">24, jan</p>
-                    <a href="{% url 'readblog' blog.post_id %}" class="btn btn-outline-success">view Tutorial</a>
+                    <a href="{% url 'readblog' blog.post_id %}" class="btn loginbtn">view Tutorial</a>
                 </div>
             </div>
         </div>
