--- a/CodingIndia/projects/templates/projects/index.html
+++ b/CodingIndia/projects/templates/projects/index.html
@@ -15,7 +15,7 @@
     }
 </style>
 
-<h1 class="text-center mt-3 mb-3 text-success"
+<h1 class="text-center mt-3 mb-3 servicetitle"
 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">Projects</h1>
 <div class="container">
     <div class="row">
@@ -25,7 +25,7 @@ style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-s
             <div class="card-body">
                 <h5 class="card-title">{{i.name|slice:"0:30"}}...</h5>
                 <p class="card-text">{{i.date}}</p>
-                <a href="{% url 'read-codes' i.id %}" class="btn btn-primary">View Code</a>
+                <a href="{% url 'read-codes' i.id %}" class="btn loginbtn">View Code</a>
             </div>
         </div>
         {% endfor %}
