--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -127,10 +127,10 @@
                     <div class="row">
                         <div class="col-md-3"></div>
                         <div class="col-md-3">
-                            <a href="" class="btn loginbtn" style="width: 100%; ">Blogs</a>
+                            <a href="{% url 'blogs_index' %}" class="btn loginbtn" style="width: 100%; ">Blogs</a>
                         </div>
                         <div class="col-md-3">
-                            <a href="" class="btn signupbtn" style="width: 100%;">Codes</a>
+                            <a href="{% url 'code_index' %}" class="btn signupbtn" style="width: 100%;">Codes</a>
                         </div>
                         <div class="col-md-3"></div>
                     </div>
