--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -153,7 +153,7 @@
                     <div class="col-lg-6">
                         <h2 class="display-5 fw-bold lh-1 mb-3 servicetitle">Website Development</h2>
                         <p class="lead">At Coding India, we offer website creation services for individuals as well as businesses.</p>
-                        <a href="{% url 'code_index' %}" class="btn loginbtn btn-lg px-4">Contact Us</a>
+                        <a href="{% url 'contacts' %}" class="btn loginbtn btn-lg px-4">Contact Us</a>
     
                     </div>
     
