--- a/CodingIndia/website/templates/website/contactus.html
+++ b/CodingIndia/website/templates/website/contactus.html
@@ -15,7 +15,7 @@
             <!--Form with header-->
             <div class="card border-primary rounded-0">
                 <div class="card-header p-0">
-                    <div class="bg-primary text-white text-center py-2">
+                    <div class="contactus text-center py-2">
                         <h3><i class="fa fa-envelope"></i> Write to us:</h3>
                         <p class="m-0">We’ll write rarely, but only the best content.</p>
                     </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="text-center">
                             <input type="submit" name="submit" value="submit"
-                                class="btn btn-primary btn-block rounded-0 my-2 py-2">
+                                class="btn contactus btn-block rounded-0 my-2 py-2">
                         </div>
                     </form>
                 </div>
@@ -78,16 +78,16 @@
             <!--Buttons-->
             <div class="row text-center">
                 <div class="col-md-4">
-                    <a class="bg-primary px-3 py-2 rounded text-white mb-2 d-inline-block"><i class="fa fa-map-marker"></i></a>
-                    <p> Jalandhar, Punjab </p>
+                    <a class="px-3 py-2 rounded contactus mb-2 d-inline-block"><i class="fa fa-map-marker"></i></a>
+                    <p class="servicetitle"> Jalandhar, Punjab </p>
                 </div>
                 <div class="col-md-4">
-                    <a class="bg-primary px-3 py-2 rounded text-white mb-2 d-inline-block"><i class="fab fa-telegram"></i></a>
-                    <p>https://t.me/codinindia2020</p>
+                    <a class="px-3 py-2 rounded contactus mb-2 d-inline-block"><i class="fab fa-telegram"></i></a>
+                    <p><a href="https://t.me/codinindia2020" class="servicetitle">Coding India</a></p>
                 </div>
                 <div class="col-md-4">
-                    <a class="bg-primary px-3 py-2 rounded text-white mb-2 d-inline-block"><i class="fa fa-envelope"></i></a>
-                    <p>codinindia@gmail.com</p>
+                    <a class="px-3 py-2 rounded contactus mb-2 d-inline-block"><i class="fa fa-envelope"></i></a>
+                    <p class="servicetitle">codinindia@gmail.com</p>
                 </div>
             </div>
         </div>
